<resources>
    <string name="app_name">Swipy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_my_backpack">My Backpack</string>
    <string name="menu_all_books">All Books</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_categories">categories</string>
    <string name="menu_my_profile">My Profile</string>

    <string name="just_a_few_details_to_get_you_started">Just a few details to get you started</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_search">search</string>
    <string name="menu_my_carts">My Carts</string>
    <string name="menu_logout">logout</string>
    <string name="menu_exchange">exchange</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
